force-app/main/default/objects/User/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <formula>IF(DATE(YEAR(TODAY()),MONTH( Start_Date__c ),DAY(Start_Date__c)) &lt;= TODAY(), DATE(YEAR(TODAY())+1,MONTH(Start_Date__c),DAY(Start_Date__c)), DATE(YEAR(TODAY()),MONTH(Start_Date__c),DAY(Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>