force-app/main/default/objects/User/fields/Anniversary_Month__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Month__c</fullName>
    <formula>Month ( Start_Date__c )</formula>
    <label>Anniversary Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>