force-app/main/default/objects/User/fields/Approve_FF_Gold__c.field-meta.xml
<CustomField>
    <fullName>Approve_FF_Gold__c</fullName>
    <label>Approve FF Gold or Silver</label>
    <relationshipName>UsernameGold</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>