force-app/main/default/objects/User/fields/Approve_FF_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Approve_FF_Platinum__c</fullName>
    <label>Approve FF Platinum</label>
    <relationshipName>Username</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>