force-app/main/default/objects/User/fields/CCAT_User__c.field-meta.xml
<CustomField>
    <fullName>CCAT_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if user is a CCAT User</description>
    <label>CCAT User</label>
    <type>Checkbox</type>
</CustomField>