force-app/main/default/objects/User/fields/Chatter_Challenge_Member__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Challenge_Member__c</fullName>
    <description>Chatter Challenge acknowledgment</description>
    <inlineHelpText>Users with &quot;Yes&quot; will be eligible to have their profile completion percentage calculated and be counted in the chatter challenge.</inlineHelpText>
    <label>Chatter Challenge Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>