force-app/main/default/objects/User/fields/cnx__Agent_AutoLogin__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_AutoLogin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Login</label>
    <type>Checkbox</type>
</CustomField>