force-app/main/default/objects/User/fields/cnx__Agent_Extension__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Extension__c</fullName>
    <description>Obsolete, use the custom field Agent Phone Extension</description>
    <encryptionScheme>None</encryptionScheme>
    <label>obsolete</label>
    <length>32</length>
    <type>Text</type>
</CustomField>