force-app/main/default/objects/User/fields/cnx__Agent_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Phone_Extension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Extension</label>
    <type>Phone</type>
</CustomField>