force-app/main/default/objects/User/fields/GSA_User__c.field-meta.xml
<CustomField>
    <fullName>GSA_User__c</fullName>
    <description>CRM-6199</description>
    <label>GSA User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales and Service</fullName>
            </value>
            <value>
                <fullName>Not a GSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>