force-app/main/default/objects/User/fields/Last_Switched_Time_to_classic__c.field-meta.xml
<CustomField>
    <fullName>Last_Switched_Time_to_classic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Switched Time to classic</label>
    <type>DateTime</type>
</CustomField>