force-app/main/default/objects/User/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This field will mention how many levels of approvals are required for different workflows.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Maximum approvals required for this user. Use the following naming convention strictly:
P-Proposal
FF-Frequent Flyer Case
SO-Sales Offers
SR-Service Requests</inlineHelpText>
    <label>Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>