force-app/main/default/objects/User/fields/Lightning_Switch_Counter__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Switch_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of times user has opted the Switch to Classic?</description>
    <inlineHelpText>Indicates the number of times user has opted the Switch to Classic?</inlineHelpText>
    <label>Lightning Switch Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>