force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Queue Members location (manila , Sydney , ..)</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manila</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Hobart</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Capetown</fullName>
            </value>
            <value>
                <fullName>Suva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>