force-app/main/default/objects/User/fields/Manage_Queues_and_Groups__c.field-meta.xml
<CustomField>
    <fullName>Manage_Queues_and_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-5194 ability to manage queues and public groups. Default is unchecked.</description>
    <inlineHelpText>This drives the visibility of the Add/Remove user into Public Groups and Queues flow</inlineHelpText>
    <label>Manage Queues and Groups</label>
    <type>Checkbox</type>
</CustomField>