force-app/main/default/objects/User/fields/Manager_s_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Role_ID__c</fullName>
    <description>This field captures the user&apos;s manager&apos;s role ID</description>
    <formula>Manager.UserRole.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&apos;s Role ID</label>
    <type>Text</type>
</CustomField>