force-app/main/default/objects/User/fields/migrated__c.field-meta.xml
<CustomField>
    <fullName>migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>migrated</label>
    <type>Checkbox</type>
</CustomField>