force-app/main/default/objects/User/fields/Operational_Group__c.field-meta.xml
<CustomField>
    <fullName>Operational_Group__c</fullName>
    <label>Operational Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Resolutions</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Team Coach</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>