force-app/main/default/objects/User/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>