force-app/main/default/objects/User/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <formula>(IF(ISBLANK(Title),0,1)+IF(ISBLANK(Phone
),0,1)/*Work Phone*/
+IF(ISBLANK(Manager.LastName ),0,1)) /3*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>