force-app/main/default/objects/User/fields/Qantas_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Staff_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qantas Staff Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>