force-app/main/default/objects/User/fields/Reporting_Team_List__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Team_List__c</fullName>
    <description>This is to determine which Team does the user belong to.</description>
    <label>Reporting Team List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales &amp; Commercial Planning - Commercial Planning</fullName>
                <color>#0B6FCE</color>
                <label>Sales &amp; Commercial Planning - Commercial Planning</label>
            </value>
            <value>
                <fullName>Sales &amp; Commercial Planning - Commercial Analysis</fullName>
                <color>#78C953</color>
                <label>Sales &amp; Commercial Planning - Commercial Analysis</label>
            </value>
            <value>
                <fullName>Sales &amp; Commercial Planning - Sales &amp; Planning Distribution</fullName>
                <color>#E27001</color>
                <label>Sales &amp; Commercial Planning - Sales &amp; Planning Distribution</label>
            </value>
            <value>
                <fullName>Sales &amp; Commercial Planning - Airline Ancillary Revenue</fullName>
                <color>#A845DC</color>
                <label>Sales &amp; Commercial Planning - Airline Ancillary Revenue</label>
            </value>
            <value>
                <fullName>Sales &amp; Commercial Planning - Head of</fullName>
                <color>#F3D904</color>
                <label>Sales &amp; Commercial Planning - Head of</label>
            </value>
            <value>
                <fullName>Sales Development &amp; Loyalty Partnerships - Customer Targeting</fullName>
                <color>#A53711</color>
                <label>Sales Development &amp; Loyalty Partnerships - Customer Targeting</label>
            </value>
            <value>
                <fullName>Sales Development &amp; Loyalty Partnerships - Head of</fullName>
                <color>#66E9BD</color>
                <label>Sales Development &amp; Loyalty Partnerships - Head of</label>
            </value>
            <value>
                <fullName>Sales Development &amp; Loyalty Partnerships - Sales &amp; Commercial Development</fullName>
                <color>#0B24BE</color>
                <label>Sales Development &amp; Loyalty Partnerships - Sales &amp; Commercial Development</label>
            </value>
            <value>
                <fullName>Sales Development &amp; Loyalty Partnerships - Sales Programs &amp; Partnerships</fullName>
                <color>#419249</color>
                <label>Sales Development &amp; Loyalty Partnerships - Sales Programs &amp; Partnerships</label>
            </value>
            <value>
                <fullName>Business &amp; Government - New Business - Yosu</fullName>
                <color>#B6E32E</color>
                <label>Business &amp; Government - New Business - Yosu</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Business Development - Yosu</fullName>
                <color>#641CCF</color>
                <label>Business &amp; Government - Business Development - Yosu</label>
            </value>
            <value>
                <fullName>Business &amp; Government - National Manager - Development &amp; New Business - Yosu</fullName>
                <color>#F96FB7</color>
                <label>Business &amp; Government - National Manager - Development &amp; New Business - Yosu</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Business - Ash</fullName>
                <color>#2F5D85</color>
                <label>Business &amp; Government - Business - Ash</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Head of</fullName>
                <color>#AFCADF</color>
                <label>Business &amp; Government - Head of</label>
            </value>
            <value>
                <fullName>Business &amp; Government - National Manager - Business - Ash</fullName>
                <color>#8F6429</color>
                <label>Business &amp; Government - National Manager - Business - Ash</label>
            </value>
            <value>
                <fullName>Business &amp; Government - National Manager - Resources - Dean</fullName>
                <color>#EFAE73</color>
                <label>Business &amp; Government - National Manager - Resources - Dean</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Darren) - Dean</fullName>
                <color>#57F17C</color>
                <label>Business &amp; Government - Resources (Darren) - Dean</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Paul) - Dean</fullName>
                <color>#0B6FCE</color>
                <label>Business &amp; Government - Resources (Paul) - Dean</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Tim) - Dean</fullName>
                <color>#78C953</color>
                <label>Business &amp; Government - Resources (Tim) - Dean</label>
            </value>
            <value>
                <fullName>Business &amp; Government - Government - Ash</fullName>
                <color>#E27001</color>
                <label>Business &amp; Government - Government - Ash</label>
            </value>
            <value>
                <fullName>QIS</fullName>
                <color>#A845DC</color>
                <label>QIS</label>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; India &amp; Africa</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>NZ &amp; Pacific &amp; South America</fullName>
            </value>
            <value>
                <fullName>UK &amp; Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>