force-app/main/default/objects/User/fields/Role_Classification__c.field-meta.xml
<CustomField>
    <fullName>Role_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Classification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>