force-app/main/default/objects/User/fields/Target_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>