force-app/main/default/objects/User/fields/Team_Level__c.field-meta.xml
<CustomField>
    <fullName>Team_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>