force-app/main/default/objects/User/fields/Why_Switch_to_Classic__c.field-meta.xml
<CustomField>
    <fullName>Why_Switch_to_Classic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Why Switch to Classic</label>
    <type>TextArea</type>
</CustomField>