force-app/main/default/objects/User/validationRules/Department_Mandatory_on_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Mandatory_on_User</fullName>
    <active>false</active>
    <description>Making &quot;Department&quot; field mandatory on user detail page</description>
    <errorConditionFormula>AND( 
ISBLANK( Department ) 
)</errorConditionFormula>
    <errorDisplayField>Department</errorDisplayField>
    <errorMessage>Please enter the value for Department</errorMessage>
</ValidationRule>