force-app/main/default/objects/User/listViews/Activated_Today.listView-meta.xml
<ListView>
    <fullName>Activated_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Location__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Activated Today</label>
</ListView>