force-app/main/default/objects/User/listViews/All_CJM.listView-meta.xml
<ListView>
    <fullName>All_CJM</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Qantas CC Journey Manager</value>
    </filters>
    <label>All CJM</label>
</ListView>