force-app/main/default/objects/User/listViews/Freight_Chat_Users.listView-meta.xml
<ListView>
    <fullName>Freight_Chat_Users</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>contains</operation>
        <value>Freight</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LIVEAGENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Freight Chat Users</label>
</ListView>